crates/parser/src/parts/snapshots/parser__parts__types_test__ty_parses_diverse_structures-function_with_receiver.snap
---
source: crates/parser/src/parts/types_test.rs
expression: kinds
---
[
    TYPE,
    FUNCTION_TYPE,
    RECEIVER_TYPE,
    TYPE_REFERENCE,
    USER_TYPE,
    SIMPLE_USER_TYPE,
    SIMPLE_IDENTIFIER,
    FUNCTION_TYPE_PARAMETERS,
    TYPE,
    TYPE_REFERENCE,
    USER_TYPE,
    SIMPLE_USER_TYPE,
    SIMPLE_IDENTIFIER,
    TYPE,
    TYPE_REFERENCE,
    USER_TYPE,
    SIMPLE_USER_TYPE,
    SIMPLE_IDENTIFIER,
]
