crates/parser/src/parts/snapshots/parser__parts__types_test__ty_parses_diverse_structures-nullable_chain.snap
---
source: crates/parser/src/parts/types_test.rs
assertion_line: 146
expression: Foo??
---
TYPE@0..5
  NULLABLE_TYPE@0..5
    TYPE_REFERENCE@0..3
      USER_TYPE@0..3
        SIMPLE_USER_TYPE@0..3
          SIMPLE_IDENTIFIER@0..3
            IDENTIFIER_TOKEN@0..3 "Foo"
    QUEST@3..4
      QUEST_NO_WS@3..4 "?"
    QUEST@4..5
      QUEST_NO_WS@4..5 "?"
