crates/parser/src/parts/snapshots/parser__parts__types_test__ty_parses_diverse_structures-simple.snap
---
source: crates/parser/src/parts/types_test.rs
expression: kinds
---
[
    TYPE,
    TYPE_REFERENCE,
    USER_TYPE,
    SIMPLE_USER_TYPE,
    SIMPLE_IDENTIFIER,
]
