crates/parser/src/parts/snapshots/parser__parts__types_test__ty_parses_diverse_structures-star_projection.snap
---
source: crates/parser/src/parts/types_test.rs
assertion_line: 146
expression: List<*>
---
TYPE@0..7
  TYPE_REFERENCE@0..7
    USER_TYPE@0..7
      SIMPLE_USER_TYPE@0..7
        SIMPLE_IDENTIFIER@0..4
          IDENTIFIER_TOKEN@0..4 "List"
        TYPE_ARGUMENTS@4..7
          L_ANGLE@4..5 "<"
          TYPE_PROJECTION@5..6
            MULT@5..6 "*"
          R_ANGLE@6..7 ">"
